--- a/views/layouts/app.pug
+++ b/views/layouts/app.pug
@@ -6,6 +6,7 @@ html(lang="en")
     title= Title
     script(src='/assets/vendor.js')
     script(src='/assets/client.js')
+    link(href='/assets/style.css' rel='stylesheet')
   body
     nav.navbar.navbar-expand-lg.navbar-light.bg-faded
       a.navbar-brand(href="/") Task Manager
